07-php-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: php
  namespace: webstack
spec:
  selector:
    app: php
  ports:
  - port: 9000
    targetPort: 9000
  type: ClusterIP
