09-nginx-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginx
  namespace: webstack
spec:
  selector:
    app: nginx
  ports:
  - port: 80
    targetPort: 80
  type: ClusterIP
